--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -107,6 +107,7 @@ objects:
     metadata:
       labels:
         app: spring-music
+        app.kubernetes.io/part-of: spring-music
       name: spring-music
     spec:
       replicas: 1
