--- a/misc/templates/nexus-server-ocp4.yml
+++ b/misc/templates/nexus-server-ocp4.yml
@@ -2,6 +2,8 @@ apiVersion: gpte.opentlc.com/v1alpha1
 kind: Nexus
 metadata:
   name: nexus
+  labels:
+    app.kubernetes.io/part-of: nexus
 spec:
   nexusVolumeSize: 10Gi
   nexusSsl: True
