--- a/devfile.yaml
+++ b/devfile.yaml
@@ -18,8 +18,8 @@ components:
     type: chePlugin
   - id: redhat/vscode-xml/latest
     type: chePlugin
-  - id: redhat/project-initializer/latest
-    type: chePlugin
+#  - id: redhat/project-initializer/latest
+#    type: chePlugin
   - mountSources: true
     endpoints:
       - name: spring-music
