--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -5,3 +5,10 @@ spec:
         - env:
             - name: JAVA_DEBUG
               value: "true"
+          resources:
+            requests:
+              cpu: 500m
+              memory: 512Mi
+            limits:
+              cpu: '1'
+              memory: 1Gi
