--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,17 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+<!--		<java.version>11</java.version>-->
 		<spring-boot.version>2.2.4.RELEASE</spring-boot.version>
 		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 		<springdoc.version>1.2.29</springdoc.version>
 <!--		For OpenShift 3 -->
 <!--		<fabric8-maven-plugin.version>3.5.42</fabric8-maven-plugin.version> -->
 		<fabric8-maven-plugin.version>4.2.0</fabric8-maven-plugin.version>
+<!--		<fabric8-maven-plugin.version>4.3.1</fabric8-maven-plugin.version>-->
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+<!--		<fabric8.generator.from>registry.redhat.io/openjdk/openjdk-11-rhel8:latest</fabric8.generator.from>-->
 	</properties>
 
 	<dependencyManagement>
@@ -88,6 +91,12 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
