Adding labels and annotations

--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -108,7 +108,12 @@ objects:
       labels:
         app: spring-music
         app.kubernetes.io/part-of: spring-music
+        app.openshift.io/runtime: java
+        app.openshift.io/runtime-version: '8'
       name: spring-music
+      annotations:
+        app.openshift.io/vcs-ref: pipeline
+        app.openshift.io/vcs-uri: "https://github.com/edeandrea/summit-lab-spring-music"
     spec:
       replicas: 1
       selector:
