--- a/misc/templates/prod-template-ocp4.yml
+++ b/misc/templates/prod-template-ocp4.yml
@@ -44,6 +44,7 @@ objects:
         application: summit-lab-spring-music
         app: spring-music
         app.kubernetes.io/part-of: spring-music
+        app.openshift.io/runtime: mysql
       annotations:
         template.alpha.openshift.io/wait-for-ready: "true"
     spec:
