--- a/misc/templates/prod-template-ocp4.yml
+++ b/misc/templates/prod-template-ocp4.yml
@@ -66,7 +66,7 @@ objects:
         app: summit-lab-spring-music
     data:
       initdb.sql: |-
-        CREATE USER IF NOT EXISTS '${DATABASE_DEBEZIUM_USERNAME}'@'%' IDENTIFIED BY '${DATABASE_DEBEZIUM_PASSWORD}';
+        CREATE USER IF NOT EXISTS '${DATABASE_DEBEZIUM_USERNAME}'@'%' IDENTIFIED WITH mysql_native_password BY '${DATABASE_DEBEZIUM_PASSWORD}';
         GRANT SELECT, RELOAD, SHOW DATABASES, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO '${DATABASE_DEBEZIUM_USERNAME}'@'%';
         FLUSH PRIVILEGES;
   - kind: ConfigMap
