--- a/misc/templates/debezium-connector-config.json
+++ b/misc/templates/debezium-connector-config.json
@@ -4,8 +4,8 @@
 		"connector.class": "io.debezium.connector.mysql.MySqlConnector",
 		"database.hostname": "summit-lab-spring-music-db",
 		"database.port": "3306",
-		"database.user": "dbz",
-		"database.password": "debezium",
+		"database.user": "${file:/opt/kafka/external-configuration/connector-config/connector.properties:dbUsername}",
+		"database.password": "${file:/opt/kafka/external-configuration/connector-config/connector.properties:dbPassword}",
 		"database.dbname": "music",
 		"database.server.name": "spring-music",
 		"database.server.id": "223344",
