--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -7,13 +7,15 @@ metadata:
   name: spring-music
 objects:
   - kind: RoleBinding
-    apiVersion: v1
+    apiVersion: rbac.authorization.k8s.io/v1
     metadata:
       labels:
         app: spring-music
       name: default_view
     roleRef:
       name: view
+      apiGroup: rbac.authorization.k8s.io
+      kind: ClusterRole
     subjects:
       - kind: ServiceAccount
         name: default
