--- a/misc/templates/amq-streams-template.yml
+++ b/misc/templates/amq-streams-template.yml
@@ -57,7 +57,7 @@ objects:
         app.openshift.io/connects-to: db-events-kafka,summit-lab-spring-music-db
         strimzi.io/use-connector-resources: "true"
     spec:
-      replicas: 1
+      replicas: ${{KAFKA_REPLICA_COUNT}}
       image: "quay.io/edeandrea/kafka-connect-debezium-mysql:latest"
       bootstrapServers: "db-events-kafka-bootstrap:9092"
       jvmOptions:
@@ -67,9 +67,9 @@ objects:
         offset.storage.topic: spring-music-db-offsets
         config.storage.topic: spring-music-db-configs
         status.storage.topic: spring-music-db-status
-        config.storage.replication.factor: 1
-        offset.storage.replication.factor: 1
-        status.storage.replication.factor: 1
+        config.storage.replication.factor: ${{KAFKA_REPLICA_COUNT}}
+        offset.storage.replication.factor: ${{KAFKA_REPLICA_COUNT}}
+        status.storage.replication.factor: ${{KAFKA_REPLICA_COUNT}}
         config.providers: file
         config.providers.file.class: org.apache.kafka.common.config.provider.FileConfigProvider
       externalConfiguration:
