Changing the way the outbox table is designed
More closely align with https://debezium.io/blog/2019/02/19/reliable-microservices-data-exchange-with-the-outbox-pattern/

--- a/misc/templates/debezium-connector-config.json
+++ b/misc/templates/debezium-connector-config.json
@@ -14,7 +14,7 @@
 		"database.history.kafka.bootstrap.servers": "db-events-kafka-bootstrap:9092",
 		"database.history.kafka.topic": "dbhistory.music",
 		"include.schema.changes": "false",
-		"table.whitelist": "music.album_events",
+		"table.whitelist": "music.outbox_events",
 		"transforms": "unwrap",
 		"transforms.unwrap.type": "io.debezium.transforms.ExtractNewRecordState",
 		"transforms.unwrap.add.source.fields": "ts_ms,db,table,server_id,gtid,file,pos,row",
