--- a/misc/templates/nexus-server-ocp4.yml
+++ b/misc/templates/nexus-server-ocp4.yml
@@ -12,6 +12,7 @@ spec:
   nexusCpuLimit: 2
   nexusMemoryRequest: 2Gi
   nexusMemoryLimit: 2Gi
+  nexusImageTag: 3.20.1-01-ubi-3
   nexus_repos_maven_proxy:
   - name: maven-central
     remote_url: https://repo1.maven.org/maven2/
