Adding connects-to annotation

--- a/misc/templates/sonarqube-template-ocp4.yml
+++ b/misc/templates/sonarqube-template-ocp4.yml
@@ -66,6 +66,8 @@ objects:
         deploymentconfig: sonarqube
         app.kubernetes.io/part-of: SonarQube
       name: sonarqube
+      annotations:
+        app.openshift.io/connects-to: postgresql-sonarqube
     spec:
       replicas: 1
       selector:
