--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
 <!--		<fabric8-maven-plugin.version>3.5.42</fabric8-maven-plugin.version> -->
 		<fabric8-maven-plugin.version>4.2.0</fabric8-maven-plugin.version>
 <!--		<fabric8-maven-plugin.version>4.3.1</fabric8-maven-plugin.version>-->
-		<oc-maven-plugin.version>0.2.0</oc-maven-plugin.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 <!--		<fabric8.generator.from>registry.redhat.io/openjdk/openjdk-11-rhel8:latest</fabric8.generator.from>-->
@@ -254,22 +253,12 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.eclipse.jkube</groupId>
-						<artifactId>oc-maven-plugin</artifactId>
-						<version>${oc-maven-plugin.version}</version>
-<!--						<configuration>-->
-<!--							<generator>-->
-<!--								<includes>-->
-<!--									<include>spring-boot</include>-->
-<!--								</includes>-->
-<!--								<config>-->
-<!--									<color>always</color>-->
-<!--								</config>-->
-<!--							</generator>-->
-<!--						</configuration>-->
+						<groupId>io.fabric8</groupId>
+						<artifactId>fabric8-maven-plugin</artifactId>
+						<version>${fabric8-maven-plugin.version}</version>
 						<executions>
 							<execution>
-								<id>jkube</id>
+								<id>fmp</id>
 								<phase>package</phase>
 								<goals>
 									<goal>resource</goal>
